// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TileList component render correctly when onClick is defined 1`] = `
<div>
  <div
    class="MuiPaper-root MuiCard-root Tile Tile--clickable MuiPaper-elevation1 MuiPaper-rounded"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root icon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
      />
    </svg>
    <div
      class="description"
    >
      <p
        class="MuiTypography-root Typography MuiTypography-body1"
      >
        Text 1
      </p>
    </div>
  </div>
</div>
`;

exports[`TileList component renders correctly 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="MuiPaper-root MuiCard-root Tile MuiPaper-elevation1 MuiPaper-rounded"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root icon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
        />
      </svg>
      <div
        class="description"
      >
        <p
          class="MuiTypography-root Typography MuiTypography-body1"
        >
          Text 1
        </p>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiCard-root Tile MuiPaper-elevation1 MuiPaper-rounded"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root icon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
        />
      </svg>
      <div
        class="description"
      >
        <p
          class="MuiTypography-root Typography MuiTypography-body1"
        >
          Text 2
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`TileList component renders correctly with pagination 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="MuiPaper-root MuiCard-root Tile MuiPaper-elevation1 MuiPaper-rounded"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root icon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
        />
      </svg>
      <div
        class="description"
      >
        <p
          class="MuiTypography-root Typography MuiTypography-body1"
        >
          Text 1
        </p>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiCard-root Tile MuiPaper-elevation1 MuiPaper-rounded"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root icon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
        />
      </svg>
      <div
        class="description"
      >
        <p
          class="MuiTypography-root Typography MuiTypography-body1"
        >
          Text 2
        </p>
      </div>
    </div>
  </div>
  <div
    class="button"
  >
    <button
      class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-outlined MuiButton-outlinedPrimary MuiButton-fullWidth"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label buttonStyles-label-4"
      >
        Show More
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`TileList component shows more tiles on 'Show more' click 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="MuiPaper-root MuiCard-root Tile MuiPaper-elevation1 MuiPaper-rounded"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root icon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
        />
      </svg>
      <div
        class="description"
      >
        <p
          class="MuiTypography-root Typography MuiTypography-body1"
        >
          Text 1
        </p>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiCard-root Tile MuiPaper-elevation1 MuiPaper-rounded"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root icon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
        />
      </svg>
      <div
        class="description"
      >
        <p
          class="MuiTypography-root Typography MuiTypography-body1"
        >
          Text 2
        </p>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiCard-root Tile MuiPaper-elevation1 MuiPaper-rounded"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root icon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
        />
      </svg>
      <div
        class="description"
      >
        <p
          class="MuiTypography-root Typography MuiTypography-body1"
        >
          Text 3
        </p>
      </div>
    </div>
  </div>
</div>
`;
